# security_device_security_level

./: OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  bundle.json  cfi_blocklist.txt  hisysevent.yaml
baselib/msglib/: BUILD.gn
baselib/msglib/include/: messenger.h
baselib/msglib/src/: messenger.c  messenger_impl.h
baselib/msglib/src/common/: messenger.c  messenger_device_status_manager.h  messenger_impl.h
baselib/msglib/src/lite/: messenger_device_session_manager.c  messenger_device_status_manager.c  messenger_impl.c
baselib/msglib/src/standard/: messenger_device_session_manager.c  messenger_device_session_manager.h  messenger_device_socket_manager.c  messenger_device_socket_manager.h  messenger_device_status_manager.c  messenger_device_status_manager.cpp  messenger_device_status_manager.h  messenger_impl.c  messenger_utils.h
baselib/msglib/src/utils/: messenger_utils.c  messenger_utils.h
baselib/utils/: BUILD.gn
baselib/utils/include/: utils_base64.h  utils_datetime.h  utils_dslm_list.h  utils_hexstring.h  utils_json.h  utils_list.h  utils_log.h  utils_mem.h  utils_mutex.h  utils_state_machine.h  utils_timer.h  utils_tlv.h  utils_work_queue.h
baselib/utils/src/: utils_base64.c  utils_datetime.c  utils_hexstring.c  utils_json.c  utils_mem.c  utils_state_machine.c  utils_timer.c  utils_timer.cpp  utils_tlv.c  utils_work_queue.c
common/: BUILD.gn  dslm.gni
common/include/: dslm_cred.h  dslm_service_ipc_interface_code.h  idevice_security_level.h
docs/: cred.md
interfaces/: BUILD.gn
interfaces/include/: device_security_defines.h  device_security_info.h
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/include/: device_security_defines.h  device_security_info.h
interfaces/inner_api/src/lite/: device_security_info.c  device_security_level_proxy.c  device_security_level_proxy.h
interfaces/inner_api/src/lite/include/: device_security_level_defines.h
interfaces/inner_api/src/lite/mini/: device_security_level_inner.c  device_security_level_inner.h
interfaces/inner_api/src/lite/small/: device_security_level_proxy.c  device_security_level_proxy.h
interfaces/inner_api/src/standard/: device_security_info.cpp  device_security_level_callback_helper.cpp  device_security_level_callback_helper.h  device_security_level_callback_stub.cpp  device_security_level_callback_stub.h  device_security_level_defines.h  device_security_level_loader.cpp  device_security_level_loader.h  device_security_level_once_promise.h  device_security_level_proxy.cpp  device_security_level_proxy.h
interfaces/src/standard/: device_security_level_callback_helper.cpp  device_security_level_defines.h  device_security_level_proxy.h
oem_property/: BUILD.gn
oem_property/common/: BUILD.gn  dslm_credential_utils.c
oem_property/include/: dslm_cred.h  dslm_credential.h
oem_property/ohos/: BUILD.gn  dslm_cred_tool.py  dslm_ohos_credential.c  dslm_ohos_credential.h
oem_property/ohos/common/: dslm_ohos_request.c  dslm_ohos_verify.c  external_interface_adapter.c  hks_adapter.c
oem_property/ohos/impl/: dslm_ohos_init.c  dslm_ohos_init.h  dslm_ohos_request.c  dslm_ohos_request.h  dslm_ohos_verify.c  dslm_ohos_verify.h  external_interface.c  external_interface.h  external_interface_adapter.c  external_interface_adapter.h  hks_adapter.c  hks_adapter.h
oem_property/ohos/lite/: BUILD.gn  dslm_ohos_credential.c  dslm_ohos_credential.h
oem_property/ohos/lite/impl/: dslm_ohos_init.c  dslm_ohos_init.h
oem_property/ohos/standard/: BUILD.gn  dslm_cred_tool.py  dslm_ohos_credential.c
oem_property/ohos/standard/impl/: dslm_ohos_init.c
param/: BUILD.gn  device_security_level.para
profile/: BUILD.gn  dslm_service.cfg  dslm_service.json  dslm_service.rc  dslm_service.xml
service/bigdata/: BUILD.gn  dslm_bigdata.cpp
service/common/: BUILD.gn  dslm_msg_serialize.c
service/dslm/: BUILD.gn  dslm_core_process.c  dslm_credential.h  (+9 more)
service/sa/: BUILD.gn
service/sa/common/: dslm_rpc_process.h
service/sa/full/: dslm_ipc_process.cpp  dslm_service.cpp
services/common/: BUILD.gn  dslm_crypto.c  dslm_msg_serialize.c
services/dfx/: BUILD.gn  dslm_bigdata.cpp  dslm_hidumper.c  dslm_hitrace.cpp
services/dslm/: BUILD.gn  dslm_core_defines.h  dslm_core_process.c  dslm_credential.c  dslm_credential.h  dslm_device_list.c  dslm_device_list.h  dslm_dfx_default.c  dslm_fsm_process.c  dslm_fsm_process.h  dslm_hidumper.c  dslm_hievent.c  dslm_hievent.h  dslm_inner_process.c  dslm_inner_process.h  dslm_msg_utils.c
services/msg/: BUILD.gn  dslm_messenger_wrapper.c
services/sa/: BUILD.gn  dslm.versionscript
services/sa/common/: dslm_rpc_process.c  dslm_rpc_process.h
services/sa/lite/: dslm_ipc_process.c  dslm_ipc_process.h  dslm_service.c  dslm_service.h  dslm_service_main.c
services/sa/lite/mini/: dslm_inner_process.c  dslm_inner_process.h  dslm_service.h  dslm_service_feature.c
services/sa/lite/small/: dslm_ipc_process.c  dslm_ipc_process.h  dslm_service.h  dslm_service_feature.c  dslm_service_main.c
services/sa/standard/: dslm_callback_proxy.cpp  dslm_callback_proxy.h  dslm_ipc_process.cpp  dslm_ipc_process.h  dslm_service.cpp  dslm_service.h
test/: BUILD.gn  dlsm_fuzzer.cpp  dslm_msg_interface_mock.cpp  dslm_msg_interface_mock.h  dslm_request_callback_mock.cpp  dslm_request_callback_mock.h  dslm_test.cpp  dslm_test.h
test/dslm_fuzz_test/: BUILD.gn
test/dslm_fuzz_test/dslm_fuzzer/: BUILD.gn  dslm_fuzzer.cpp  project.xml
test/dslm_fuzz_test/mock/: mock.c  mock.cpp  mock.h  socket.h  trans_type.h
test/dslm_fuzzer/: BUILD.gn  dslm_fuzzer.cpp
test/dslm_unit_test/: BUILD.gn  device_manager.cpp  device_manager.h  device_manager_callback.h  device_manager_mock.cpp  device_manager_mock.h  dm_device_info.h  dslm_baselib_utils_test.cpp  dslm_memory_mock.cpp  dslm_memory_mock.h  dslm_msg_interface_mock.cpp  dslm_msg_interface_mock.h  dslm_msg_lib_test.cpp  dslm_msg_lib_test.h  dslm_oem_property_test.cpp  dslm_request_callback_mock.h  dslm_second_test.cpp  dslm_test.cpp  dslm_test.h  dslm_test_link.c  dslm_test_link.h
test/dslm_unit_test/cmocker/: c_mocker.h
(+15 files in other folders)
