# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  dslm_hilog_path = "//base/hiviewdfx/hilog_lite/frameworks"
  dslm_dsoftbus_path = "//foundation/communication/dsoftbus"
  dslm_common_lib_path = "//commonlibrary/utils_lite"
  dslm_ipc_path = "//foundation/communication/ipc"
  dslm_samgr_path = "//foundation/systemabilitymgr"
  dslm_lite_component_path = "//build/lite/config/component"
}
