# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("device_security_level_ext_config") {
  include_dirs = [ "include" ]
}

ohos_source_set("dslm_oem_ext") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    blocklist = "../cfi_blocklist.txt"
  }
  branch_protector_ret = "pac_ret"

  sources = [ "ohos/standard/dslm_ohos_credential.c" ]

  include_dirs = [
    "../common/include",
    "../interfaces/inner_api/include",
    "ohos/standard",
    "ohos/common",
    "common",
    "ohos/standard/impl",
    "../baselib/utils/include",
  ]

  deps = [ "ohos/standard:dslm_ohos_cred_obj" ]

  configs = [ "../common:common_configs" ]

  public_configs = [ ":device_security_level_ext_config" ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "device_security_level"
  subsystem_name = "security"
}
