# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

## Install device_security_level.para to /system/etc/param/device_security_level.para

group("param_files") {
  deps = [ ":device_security_level.para" ]
}

ohos_prebuilt_etc("device_security_level.para") {
  source = "device_security_level.para"

  relative_install_dir = "param"
  part_name = "device_security_level"
  subsystem_name = "security"
}
