# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# messenger_static lib
config("messenger_static_config") {
  visibility = [ ":*" ]
  include_dirs = [ "include" ]
}

ohos_static_library("messenger_static") {
  include_dirs = [
    "include",
    "src",
  ]

  sources = [ "src/messenger.c" ]

  if (is_standard_system) {
    include_dirs += [ "src/standard" ]
    sources += [
      "src/standard/messenger_device_session_manager.c",
      "src/standard/messenger_device_status_manager.c",
      "src/standard/messenger_impl.c",
    ]
    external_deps = [
      "dsoftbus:softbus_client",
      "hilog_native:libhilog",
      "utils_base:utils",
    ]
  }

  deps = [ "//base/security/device_security_level/baselib/utils:utils_static" ]

  public_configs = [ ":messenger_static_config" ]
  part_name = "device_security_level"
  subsystem_name = "security"
}
