# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# service_bigdata object
ohos_source_set("service_bigdata_obj") {
  sources = [ "dslm_bigdata.cpp" ]

  include_dirs = [ "//base/security/devicesecuritylevel/service/include" ]

  deps = [ "//base/security/devicesecuritylevel/baselib/utils:utils_static" ]

  external_deps = [
    "hilog_native:libhilog",
    "utils_base:utils",
  ]

  part_name = "devicesecuritylevel"
  subsystem_name = "security"
}
