# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# sa lib
ohos_static_library("service_sa_static") {
  sources = [
    "common/dslm_rpc_process.c",
    "full/dslm_callback_proxy.cpp",
    "full/dslm_ipc_process.cpp",
    "full/dslm_service.cpp",
  ]

  include_dirs = [
    "//base/security/device_security_level/common/include",
    "//base/security/device_security_level/interfaces/include",
    "//base/security/device_security_level/service/include",
    "//base/security/device_security_level/service/sa/common",
  ]

  deps = [
    "//base/security/device_security_level/baselib/utils:utils_static",
    "//base/security/device_security_level/service/bigdata:service_bigdata_obj",
    "//base/security/device_security_level/service/common:service_common_obj",
    "//base/security/device_security_level/service/dslm:service_dslm_obj",
    "//base/security/device_security_level/service/msg:service_msg_obj",
  ]

  external_deps = [
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "utils_base:utils",
  ]

  if (is_large_system) {
    external_deps += [
      "hilog:libhilog",
      "samgr:samgr_proxy",
    ]
  }

  if (is_standard_system) {
    external_deps += [
      "hilog_native:libhilog",
      "samgr_standard:samgr_proxy",
    ]
  }

  part_name = "device_security_level"
  subsystem_name = "security"
}
