# c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

# service_common object
ohos_source_set("service_common_obj") {
  sources = [
    "dslm_crypto.c",
    "dslm_msg_serialize.c",
  ]

  include_dirs = [
    "//base/security/device_security_level/interfaces/inner_api/include",
    "//base/security/device_security_level/services/include",
  ]

  deps = [ "//base/security/device_security_level/baselib/utils:utils_static" ]
  if (is_standard_system) {
    deps += [ "//third_party/boringssl:crypto" ]
  }

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_core",
    "utils_base:utils",
  ]

  if (is_large_system) {
    aosp_deps = [ "shared_library:libcrypto" ]
  }

  part_name = "device_security_level"
  subsystem_name = "security"
}
